# kpublicalerts

./: .craft.ini  .craftignore  .flatpak-manifest.json  .flatpak-manifest.json.license  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  README.md
.reuse/: dep5
autotests/: CMakeLists.txt
po/ar/: kpublicalerts.po
po/ca/: kpublicalerts.po
po/ca@valencia/: kpublicalerts.po
po/cs/: kpublicalerts.po
po/de/: kpublicalerts.po
po/es/: kpublicalerts.po
po/eu/: kpublicalerts.po
po/fi/: kpublicalerts.po
po/fr/: kpublicalerts.po
po/gl/: kpublicalerts.po
po/he/: kpublicalerts.po
po/ia/: kpublicalerts.po
po/it/: kpublicalerts.po
po/ka/: kpublicalerts.po
po/ko/: kpublicalerts.po
po/lt/: kpublicalerts.po
po/lv/: kpublicalerts.po
po/nl/: kpublicalerts.po
po/pl/: kpublicalerts.po
po/pt_BR/: kpublicalerts.po
po/sk/: kpublicalerts.po
po/sl/: kpublicalerts.po
po/sv/: kpublicalerts.po
po/tr/: kpublicalerts.po
po/uk/: kpublicalerts.po
po/zh_CN/: kpublicalerts.po
po/zh_TW/: kpublicalerts.po
src/: CMakeLists.txt  Messages.sh
src/app/: AlertPage.qml  AlertsPage.qml  CMakeLists.txt  Main.qml  MapView.qml  OSMPlugin.qml  SubscriptionArea.qml  SubscriptionPage.qml  SubscriptionsPage.qml  alertsmanager.cpp  alertsmanager.h  alertssortproxymodel.cpp  alertssortproxymodel.h  application.cpp  application.h  areamodel.cpp  areamodel.h  caputil.cpp  caputil.h  geomath.cpp  geomath.h  kpublicalerts.notifyrc  main.cpp  main.qml  notifyrc.qrc  org.kde.kpublicalerts.service.in  org.kde.publicalerts.appdata.xml  org.kde.publicalerts.desktop  org.kde.publicalerts.service.in  polygonsimplifier.cpp  polygonsimplifier.h  publicalerts.notifyrc  qml.qrc  restapi.cpp  restapi.h  subscription.cpp  subscription.h  subscriptionmanager.cpp  subscriptionmanager.h
src/app/android/: AndroidManifest.xml  build.gradle
src/publicAlertAggregator/: .dockerignore  Dockerfile  entry.sh  manage.py  requirements.txt
src/publicAlertAggregator/aggregator/: admin.py  apps.py  feeder.py  models.py  notify.py  urls.py  views.py
src/publicAlertAggregator/aggregator/migrations/: 0001_initial.py
src/publicAlertAggregator/feeder/: apps.py  notify.py  urls.py  views.py
src/publicAlertAggregator/publicAlertAggregator/: asgi.py  settings.py  urls.py  wsgi.py
src/publicAlertFeeder/: .dockerignore  Dockerfile  abstractfeedreader.py  capfeedreader.py  dwdfeedreader.py  mowasfeedreader.py  publicAlertFeeder.py  requirements.txt
src/publicAlertFeeder/data/EMMA_ID/: AT001.geojson  AT002.geojson  AT003.geojson  AT004.geojson  AT005.geojson  AT006.geojson  AT007.geojson  AT008.geojson  AT009.geojson  AT010.geojson  AT101.geojson  AT102.geojson  AT103.geojson  AT104.geojson  AT105.geojson  AT106.geojson  AT107.geojson  AT108.geojson  AT109.geojson  AT201.geojson  AT202.geojson  AT203.geojson  AT204.geojson  AT205.geojson  AT206.geojson  AT207.geojson  AT208.geojson  AT209.geojson  AT210.geojson  AT301.geojson  AT302.geojson  AT303.geojson  AT304.geojson  AT305.geojson  AT306.geojson  AT307.geojson  AT308.geojson  AT309.geojson  AT310.geojson  AT311.geojson  (+1613 more)
src/publicAlertFeeder/data/FIPS/: AN.geojson  EI01.geojson  EI02.geojson  EI03.geojson  EI04.geojson  EI06.geojson  EI07.geojson  EI10.geojson  EI11.geojson  EI12.geojson  EI13.geojson  EI14.geojson  EI15.geojson  EI16.geojson  EI18.geojson  EI19.geojson  EI20.geojson  EI21.geojson  EI22.geojson  EI23.geojson  EI24.geojson  EI25.geojson  EI26.geojson  EI27.geojson  EI29.geojson  EI30.geojson  EI31.geojson
src/publicAlertFeeder/data/NUTS2/: AT11.geojson  AT12.geojson  AT13.geojson  AT21.geojson  AT22.geojson  AT31.geojson  AT32.geojson  AT34.geojson  BE21.geojson  BE22.geojson  BE23.geojson  BE24.geojson  BE25.geojson  BE32.geojson  BE33.geojson  BE34.geojson  BE35.geojson  EL11.geojson  EL12.geojson  EL13.geojson  EL14.geojson  EL21.geojson  EL22.geojson  EL24.geojson  EL25.geojson  EL30.geojson  EL41.geojson  EL42.geojson  EL43.geojson  HR03.geojson  HR04.geojson  HU10.geojson  HU21.geojson  HU22.geojson  HU23.geojson  HU31.geojson  HU32.geojson  HU33.geojson  NL11.geojson  NL12.geojson  (+10 more)
src/publicAlertFeeder/data/NUTS3/: AT331.geojson  AT333.geojson  BG311.geojson  BG312.geojson  BG313.geojson  BG314.geojson  BG315.geojson  BG321.geojson  BG322.geojson  BG323.geojson  BG324.geojson  BG325.geojson  BG331.geojson  BG332.geojson  BG333.geojson  BG334.geojson  BG341.geojson  BG342.geojson  BG343.geojson  BG344.geojson  BG411.geojson  BG412.geojson  BG413.geojson  BG414.geojson  BG415.geojson  BG421.geojson  BG422.geojson  BG423.geojson  BG424.geojson  BG425.geojson  CZ020.geojson  CZ031.geojson  CZ032.geojson  CZ041.geojson  CZ042.geojson  CZ051.geojson  CZ052.geojson  CZ053.geojson  CZ063.geojson  CZ064.geojson  (+294 more)
src/setup/: db-setup.sh  db_dump.sh  docker-compose-dev.yml  docker-compose.yml  httpd.conf
src/tools/: meteoalarm-geocode-expander.py
